Small bug fix with label z-index

--- a/packages/stencil/src/components/datacom-dropdown/datacom-dropdown.css
+++ b/packages/stencil/src/components/datacom-dropdown/datacom-dropdown.css
@@ -202,7 +202,6 @@
   font-size: 12px;
   top: -6px;
   left: 16px;
-  z-index: 20;
 }
 
 .dc-ddl-selected .dc-ddl-control {
